# csgo-external

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
csgo/: client.cpp  client.h  csgo.cpp  csgo.h  engine.cpp  engine.h  player.cpp  player.h
csgo/offsets/: netvars.h  signatures.h
csgo/types/: matrix.h  vec2.h  vec3.h
hacks/: bunny_hop.cpp  bunny_hop.h  trigger_bot.cpp  trigger_bot.h  visual.cpp  visual.h
hacks/visual/: recoil_crosshair.cpp  recoil_crosshair.h  sniper_crossair.cpp  sniper_crosshair.h  watermark.cpp  watermark.h
system/: README.md  input.cpp  input.h  module.cpp  module.h  overlay.cpp  overlay.h  process.cpp  process.h
